# kafka-aiven-starter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
.husky/: commit-msg
infrastructure/: .terraform.lock.hcl  dev.tfvars  dev.tfvars.example  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
src/aiven/: consumer-avro.py  consumer.py  order.avsc  producer-avro.py  producer.py
src/confluent/: consumer-avro.py  consumer.py  producer-avro.py  producer.py
